--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/nexperia/pcn-search.git"
   },
-  "license": "CC-BY-4.0",
+  "license": "MIT",
   "devDependencies": {
     "bower": "~1.8.0",
     "browserify": "~14.4.0",
